2002-11-22  Darin Adler  <darin@apple.com>

        * khtml/ecma/kjs_dom.cpp: (DOMNode::pushEventHandlerScope): Change to push handlers
	on an existing scope chain rather than returning one. Name change too.
        * khtml/ecma/kjs_dom.h: More of the same.
        * khtml/ecma/kjs_html.cpp: (KJS::HTMLElement::pushEventHandlerScope): And here.
        * khtml/ecma/kjs_html.h: And here.

        * khtml/ecma/kjs_events.cpp: (JSEventListener::handleEvent): Use the pushEventHandlerScope
	function, and also don't worry about optimizing the "no change" case, because that already
	works pretty efficiently.

2002-11-22  David Hyatt  <hyatt@apple.com>

	Fix for the weather.com, slate and espn malformations that
	could occur.  Also reverting an earlier change for handling
	font tags like other inlines.  Both FONT and A need to be
	given special treatment until I can implement a strategy that
	will allow them to be handled just like the other inlines.
	
        * khtml/html/dtd.cpp:
        (DOM::checkChild):
        * khtml/html/html_elementimpl.cpp:
        (HTMLElementImpl::isInline):
        * khtml/html/html_elementimpl.h:
        * khtml/xml/dom_nodeimpl.h:

2002-11-21  Darin Adler  <darin@apple.com>

        * khtml/ecma/kjs_dom.cpp: (DOMNode::eventHandlerScope): List -> ScopeChain.
        * khtml/ecma/kjs_dom.h: List -> ScopeChain.
        * khtml/ecma/kjs_events.cpp: (JSEventListener::handleEvent): List -> ScopeChain.
        * khtml/ecma/kjs_html.cpp: (KJS::HTMLElement::eventHandlerScope): List -> ScopeChain.
        * khtml/ecma/kjs_html.h: List -> ScopeChain.

        * force-js-clean-timestamp: Not sure this is required, but better safe than sorry.

2002-11-21  Maciej Stachowiak  <mjs@apple.com>

        * force-js-clean-timestamp: Touch so other people's builds work.

2002-11-21  David Hyatt  <hyatt@apple.com>

	Nested <a>s are never allowed.  Make sure to always pop the
	<a> blocks.
	
        * khtml/html/htmlparser.cpp:
        (KHTMLParser::getElement):
