@@ -147,6 +147,8 @@ public:
 
     virtual Id id() const;
 
+    virtual NodeImpl *addChild(NodeImpl *child);
+    
     HTMLElementImpl *insertRow ( long index );
     void deleteRow ( long index );
 
