@@ -1,3 +1,15 @@
+2002-11-22  David Hyatt  <hyatt@apple.com>
+
+	Fix for the table/form regressions.  Also landing beginnings
+	of the block/inline work.
+	
+        * khtml/html/html_tableimpl.cpp:
+        (HTMLTableSectionElementImpl::addChild):
+        * khtml/html/html_tableimpl.h:
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::RenderFlow):
+        * khtml/rendering/render_flow.h:
+
 2002-11-22  Darin Adler  <darin@apple.com>
 
         * khtml/ecma/kjs_dom.cpp: (DOMNode::pushEventHandlerScope): Change to push handlers
